--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "nebular-icons": "1.1.0",
+    "ng2-completer": "^3.0.3",
+    "ng2-smart-table": "^1.5.0",
     "node-sass": "^4.13.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
